# paper-trader

./: .gitignore  Makefile  README.md  pyproject.toml
config/: settings.yaml
scripts/: auto_trade.sh  setup.sh
src/: main.py
src/agent/: debate.py  env.py  features.py  llm_analyst.py  model.py  reflection.py  reward.py  signal_fusion.py  trainer.py
src/backtest/: engine.py  llm_validator.py  metrics.py  walkforward.py
src/config/: loader.py
src/data/: factor_miner.py  indicators.py  news_fetcher.py  pipeline.py  providers.py  store.py
src/ibkr/: client.py  market_data.py  order_manager.py
src/monitor/: api.py  app.py  llm_store.py  logger.py  reporter.py
src/nlp/: command_handler.py  strategy_parser.py
src/risk/: limits.py
tests/: test_backtest.py  test_config.py  test_env.py  test_features.py  test_reward.py
