[project]
name = "paper-trader"
version = "0.1.0"
description = "US stock paper trading system with RL agent and IBKR integration"
requires-python = ">=3.11"

dependencies = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.40",
    "ta>=0.11.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pyarrow>=17.0",
    "streamlit>=1.35.0",
    "plotly>=5.24.0",
    "ib_insync>=0.9.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
paper-trader = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
